--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,14 +7,14 @@ stages:
   - dist
   - test
 variables:
-  ANT_HOME: "/path/to/ant"  # Set the path to your Ant installation
+  ANT_HOME: "/home/dosi/Téléchargements/apache-ant-1.9.6/bin/ant"  # Set the path to your Ant installation
 
 before_script:
   - export PATH="$ANT_HOME/bin:$PATH"
   - echo "Starting the CI/CD pipeline..."
   - export VERSION="v$(date +'%Y%m%d')"
   - ant -version  # Check Ant installation
-  
+
 clean-job:
   stage: clean
   script:
