--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 stages:
   - build
-  
+  - test
 
 variables:
   ANT_HOME: "/home/dosi/Téléchargements/apache-ant-1.9.6/"  # Set the path to your Ant installation
@@ -24,51 +24,5 @@ build:
   tags:
     - ysf_hr
 
-test:
-  stage: test
-  script:
-    - echo "Running tests with Ant..."
-    - ant compile-test
-    - ant test  # Assuming you have a test target in your build file
-  only:
-    - main
-    - dev
-  tags:
-    - ysf_hr
-  
-
-javadoc:
-  stage: docs
-  script:
-    - echo "Generating Javadoc with Ant..."
-    - ant javadoc
-  only:
-    - main
-    - dev
-  tags:
-    - ysf_hr
-  dependencies:
-    - build
-  artifacts:
-    paths:
-      - javadoc/
-    expire_in: 1 week
-
-dist:
-  stage: dist
-  script:
-    - echo "Packaging the project into a JAR file with Ant..."
-    - ant dist
-  only:
-    - main
-    - dev
-  tags:
-    - ysf_hr
-  dependencies:
-    - build  
-  artifacts:
-    paths:
-      - dist/
-    expire_in: 1 week
 
 
