--- a/.classpath
+++ b/.classpath
@@ -7,7 +7,7 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
-	<classpathentry kind="lib" path="/home/dosi/TP-Apache Ant/TetrisAnt/lib/commons-lang3-3.5.jar">
+	<classpathentry kind="lib" path="/home/dosi/TP-Apache-YR/lib/commons-lang3-3.5.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
@@ -16,3 +16,4 @@
 	<classpathentry kind="lib" path="lib/hamcrest-all-1.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
+
