--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,66 @@
 
+stages:
+  - build
+  - docs
+  - dist
+
+variables:
+  ANT_HOME: "/home/dosi/Téléchargements/apache-ant-1.9.6"  # Set the path to your Ant installation
+
+before_script:
+  - export PATH="$ANT_HOME/bin:$PATH"
+  - echo "Starting the CI/CD pipeline..."
+  - export VERSION="v$(date +'%Y%m%d')"
+  - ant -version  # Check Ant installation
+
+build:
+  stage: build
+  script:
+    - echo "Cleaning up workspace..."
+    - echo "Building the project with Ant..."
+    - ant compile
+  only:
+    - main
+    - dev
+  tags:
+    - ysf_hr
+
+
+javadoc:
+  stage: docs
+  script:
+    - echo "Generating Javadoc with Ant..."
+    - ant javadoc
+  only:
+    - main
+    - dev
+  tags:
+    - ysf_hr
+  dependencies:
+    - build 
+  artifacts:
+    paths:
+      - javadoc/
+    expire_in: 1 week
+
+dist:
+  stage: dist
+  script:
+    - echo "Packaging the project into a JAR file with Ant..."
+    - ant dist
+  
+  only:
+    - main
+    - dev
+  tags:
+    - ysf_hr
+  dependencies:
+    - build  
+  artifacts:
+    paths:
+      - dist/
+    expire_in: 1 week
+
+
 
 
