--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,10 @@
-
 stages:
-  - cleanup
   - build
-  - test
-  - documentation
+  - docs
+  - dist
+
 variables:
-  ANT_HOME: "/home/dosi/Téléchargements/apache-ant-1.9.6"  # Set the path to your Ant installation
+  ANT_HOME: "home/dosi/Téléchargements/apache-ant-1.9.6"  # Set the path to your Ant installation
 
 before_script:
   - export PATH="$ANT_HOME/bin:$PATH"
@@ -16,33 +15,50 @@ before_script:
 build:
   stage: build
   script:
-    - echo "Building the project..."
-    - ant compile
+    - echo "Cleaning up workspace..."
+    - echo "Building the project with Ant..."
+    - ant -d compile
+  only:
+    - main
+    - dev
+  tags:
+    - ysf_hr
 
-test:
-  stage: test
-  script:
-    - echo "Running tests..."
-    - ant test
-  artifacts:
-    paths:
-      - bin/test-results/**/*
-      - test-reports/**/*
 
-documentation:
-  stage: documentation
+javadoc:
+  stage: docs
   script:
-    - echo "Generating documentation..."
+    - echo "Generating Javadoc with Ant..."
     - ant javadoc
+  only:
+    - main
+    - dev
+  tags:
+    - ysf_hr
+  dependencies:
+    - build 
   artifacts:
     paths:
-      - javadoc/**/*
+      - javadoc/
+    expire_in: 1 week
 
-clean:
-  stage: cleanup
+dist:
+  stage: dist
   script:
-    - echo "Cleaning up..."
-    - ant clean
+    - echo "Packaging the project into a JAR file with Ant..."
+    - ant dist
+  
+  only:
+    - main
+    - dev
+  tags:
+    - ysf_hr
+  dependencies:
+    - build  
+  artifacts:
+    paths:
+      - dist/
+    expire_in: 1 week
 
 
 
