--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,15 @@ build:
   stage: build
   script:
     - docker build -t my-image:latest .
-    -  docker run my-image:latest
+    - docker run my-image:latest
+    - mkdir -p output
+    - cp /app/bin/*.jar output/Tetris.jar  # Adjust the path to your JAR file
+    - docker rm my-running-app  # Clean up the container after running
+  artifacts:
+    paths:
+      - output/Tetris.jar
+    expire_in: 1 week
+
   
    
 
