--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ build:
     - docker run my-image:latest
     - mkdir -p output
     - cp /app/bin/*.jar output/Tetris.jar  # Adjust the path to your JAR file
-    - docker rm my-running-app  # Clean up the container after running
+    - docker rm my-running-app  # Clean up the container after runnin
   artifacts:
     paths:
       - output/Tetris.jar
