--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ build:
     - docker build -t my-image:latest .
     - docker run my-image:latest
     - mkdir -p output
-    - cp /app/bin/*.jar output/Tetris.jar  # Adjust the path to your JAR file
+    - cp app/bin/*.jar output/Tetris.jar  # Adjust the path to your JAR file
     - docker rm my-running-app  # Clean up the container after runnin
   artifacts:
     paths:
