--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,7 @@ jobs:
 
     services:
       docker:
-        image: docker:dind
+        image: docker:27.3.1
         options: >-
           --privileged
         ports:
