--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,8 +35,7 @@ jobs:
 
       - name: Run Docker container and extract files
         run: |
-          docker create --name my-java-container my-java-app:latest
-          docker run my-java-container
+          docker run --name my-java-container my-java-app:latest
           docker cp my-java-container:/app/bin output/
           docker rm my-java-container
 
