--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,11 +36,12 @@ jobs:
       - name: Run Docker container and extract files
         run: |
           docker run --name my-java-container my-java-app:latest
-          docker cp my-java-container:/app/bin output/
+          docker exec ls /app
+          docker cp my-java-container:/app/bin/Tetris.jar Tetris.jar 
           docker rm my-java-container
 
       - name: Upload output files
         uses: actions/upload-artifact@v3
         with:
-          name: output-files
-          path: output/
+          name: Tetris
+          path: Tetris.jar
