--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,38 +9,33 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    services:
-      docker:
-        image: docker:27.3.1
-        options: >-
-          --privileged
-        ports:
-          - 2375:2375
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Build Docker image
-        run: |
-          docker build -t my-java-app:latest .
-
-      - name: Create output directory
-        run: |
-          mkdir -p output
-
-      - name: Run Docker container and extract files
-        run: |
-          docker run --name my-java-container my-java-app:latest
-          docker cp my-java-container:/app/bin/Tetris.jar Tetris.jar 
-          docker rm my-java-container
-
-      - name: Upload output files
-        uses: actions/upload-artifact@v3
+      
+      - name: Setup JDK 17
+        uses: actions/set-java@v2
         with:
-          name: Tetris
-          path: Tetris.jar
+          distribution: 'corretto'
+          java-version: 17
+
+      - name: Dowload Ant and Ivy
+        run: |
+          apt-get install openjdk
+          apt-get update && apt-get install -y ant curl
+          apt-get clean
+          mkdir -p /usr/local/ivy
+          curl -L https://dlcdn.apache.org/ant/ivy/2.5.2/apache-ivy-2.5.2-bin.tar.gz | tar xz -C /usr/local/ivy --strip-components=1
+          mv /usr/local/ivy/ivy-2.5.2.jar /usr/local/ivy/ivy.jar
+      
+      - name: Build Ant
+        run: ant dist
+
+      - name: Build Docker Image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          dockerfile: dockerfile
+          push: false
+          tags: myImage:latest
+
