--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
       
       - name: Setup JDK 17
-        uses: actions/set-java@v2
+        uses: actions/setup-java@v2
         with:
           distribution: 'corretto'
           java-version: 17
