--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,6 +16,7 @@ jobs:
       - name: Setup JDK 17
         uses: actions/setup-java@v2
         with:
+          distribution: 'oracle'
           java-version: 17
 
       - name: Dowload Ant and Ivy
