--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,15 +13,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       
-      - name: Setup JDK 17
-        uses: actions/setup-java@v2
-        with:
-          distribution: 'oracle'
-          java-version: 17
-
       - name: Dowload Ant and Ivy
         run: |
-          apt-get install openjdk
+          apt-get install openjdk-17-jdk
           apt-get update && apt-get install -y ant curl
           apt-get clean
           mkdir -p /usr/local/ivy
