--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,9 +15,9 @@ jobs:
       
       - name: Dowload Ant and Ivy
         run: |
-          apt-get install openjdk-17-jdk
-          apt-get update && apt-get install -y ant curl
-          apt-get clean
+          sudo apt-get install openjdk-17-jdk
+          sudo apt-get update && apt-get install -y ant curl
+          sudo apt-get clean
           mkdir -p /usr/local/ivy
           curl -L https://dlcdn.apache.org/ant/ivy/2.5.2/apache-ivy-2.5.2-bin.tar.gz | tar xz -C /usr/local/ivy --strip-components=1
           mv /usr/local/ivy/ivy-2.5.2.jar /usr/local/ivy/ivy.jar
