--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,9 @@ jobs:
       - name: Dowload Ant and Ivy
         run: |
           sudo apt-get install openjdk-17-jdk
+          echo "salit 1"
           sudo apt-get update && apt-get install -y ant curl
+          echo "salit 2"
           sudo apt-get clean
           mkdir -p /usr/local/ivy
           curl -L https://dlcdn.apache.org/ant/ivy/2.5.2/apache-ivy-2.5.2-bin.tar.gz | tar xz -C /usr/local/ivy --strip-components=1
