edit ci.yaml 10

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,8 +23,8 @@ jobs:
           sudo apt-get clean
           which ant
           TEMP_DIR=$(mktemp -d)
-          curl -L https://dlcdn.apache.org/ant/ivy/2.5.2/apache-ivy-2.5.2-bin.tar.gz | tar xz -C "$TEMP_DIR"
-          sudo mv "$TEMP_DIR/ivy-2.5.2.jar" /usr/ivy.jar
+          curl -L https://dlcdn.apache.org/ant/ivy/2.5.2/apache-ivy-2.5.2-bin.tar.gz | tar xz -C usr/
+          sudo mv usr/ivy-2.5.2.jar /usr/ivy.jar
           rm -rf "$TEMP_DIR"
       
       - name: Build Ant
