--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,11 +21,10 @@ jobs:
           sudo apt-get install -y ant curl
           echo "salit 2"
           sudo apt-get clean
-          which ant
-          TEMP_DIR=$(mktemp -d)
-          curl -L https://dlcdn.apache.org/ant/ivy/2.5.2/apache-ivy-2.5.2-bin.tar.gz | tar xz -C usr/
-          sudo mv usr/ivy-2.5.2.jar /usr/ivy.jar
-          rm -rf "$TEMP_DIR"
+          cd /usr
+          mkdir ivy
+          curl -L https://dlcdn.apache.org/ant/ivy/2.5.2/apache-ivy-2.5.2-bin.tar.gz | tar xz -C usr/ivy/
+          sudo mv usr/ivy/ivy-2.5.2.jar /usr/ivy/ivy.jar
       
       - name: Build Ant
         run: ant dist
