--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,7 +22,7 @@ jobs:
           echo "salit 2"
           sudo apt-get clean
           cd /usr
-          mkdir ivy
+          sudo mkdir ivy
           curl -L https://dlcdn.apache.org/ant/ivy/2.5.2/apache-ivy-2.5.2-bin.tar.gz | tar xz -C usr/ivy/
           sudo mv usr/ivy/ivy-2.5.2.jar /usr/ivy/ivy.jar
       
