--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,7 +24,8 @@ jobs:
           sudo ls
           cd /usr
           sudo mkdir ivy
-          sudo curl -L https://dlcdn.apache.org/ant/ivy/2.5.2/apache-ivy-2.5.2-bin.tar.gz | tar xz -C /usr/ivy
+
+          curl -L https://dlcdn.apache.org/ant/ivy/2.5.2/apache-ivy-2.5.2-bin.tar.gz | sudo tar xz -C /usr/ivy
           sudo mv usr/ivy/ivy-2.5.2.jar /usr/ivy/ivy.jar
       
       - name: Build Ant
