--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,8 +25,9 @@ jobs:
           cd /usr
           sudo mkdir ivy
           curl -L https://dlcdn.apache.org/ant/ivy/2.5.2/apache-ivy-2.5.2-bin.tar.gz | sudo tar xz -C /usr/ivy
-          cd ivy
+          
           sudo ls
+          sudo mv usr/ivy/apache-ivy-2.5.2/ivy-2.5.2.jar /usr/ivy.jar
       
       - name: Build Ant
         run: ant dist
