--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,7 +28,7 @@ jobs:
           cd ivy/
           cd apache-ivy-2.5.2/
           sudo ls
-          sudo cp *.jar /usr/ivy.jar
+          sudo cp *.jar /usr/
       
       - name: Build Ant
         run: ant dist
