edit ci.yaml 10

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,5 +39,5 @@ jobs:
           context: .
           dockerfile: dockerfile
           push: false
-          tags: myImage:latest
+          tags: myimage:latest
 
