--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,5 +39,23 @@ jobs:
           context: .
           dockerfile: dockerfile
           push: false
-          tags: myimage:latest
+          tags: ${{secrets.DOCKER_HUB_USERNAME}}/TetrisAnt:latest
+
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{secrets.DOCKER_HUB_USERNAME}}
+          password: ${{secrets.DOCKER_HUB_ACCESS_TOKEN}}
+
+
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          dockerfile: dockerfile
+          push: true
+          tags: ${{secrets.DOCKER_HUB_USERNAME}}/TetrisAnt:latest
+             
+          
 
