--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,14 +48,19 @@ jobs:
 
       
   push:
+    runs-on: ubuntu-latest
+    needs: build
     steps:
-      -name: Push to Docker Hub
-       if: startsWith(github.ref, 'refs/tags/') && github.ref_name =~ '^[0-9]+\.[0-9]+\.[0-9]+$'
-       uses: docker/build-push-action@v2
-       with:
-        context: .
-        dockerfile: dockerfile
-        push: true
-        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/tetrisant:today  
+      - name: Push to Docker Hub
+        if: startsWith(github.ref, 'refs/tags/') && github.ref_name =~ '^[0-9]+\.[0-9]+\.[0-9]+$'
+        run: |
+          echo "Pushing Docker image to Docker Hub"
+          docker tag ${{ secrets.DOCKER_HUB_USERNAME }}/tetrisant:latest ${{ secrets.DOCKER_HUB_USERNAME }}/tetrisant:${{ github.ref_name }}
+          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/tetrisant:${{ github.ref_name }}
 
+      - name: Manual Execution Step
+        if: github.event_name == 'workflow_dispatch'  # Only runs on manual trigger
+        run: |
+          echo "Running manual execution for Docker image push."
+          docker push /your-image-name:${{ github.ref_name }}
           
