--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -52,15 +52,8 @@ jobs:
     needs: build
     steps:
       - name: Push to Docker Hub
-        if: startsWith(github.ref, 'refs/tags/') && github.ref_name != '' && contains(github.ref_name, '.') && (github.ref_name | split('.') | length) == 3
+        if: github.event_name == 'workflow_dispatch'
         run: |
           echo "Pushing Docker image to Docker Hub"
           docker tag ${{ secrets.DOCKER_HUB_USERNAME }}/tetrisant:latest ${{ secrets.DOCKER_HUB_USERNAME }}/tetrisant:${{ github.ref_name }}
           docker push ${{ secrets.DOCKER_HUB_USERNAME }}/tetrisant:${{ github.ref_name }}
-
-      - name: Manual Execution Step
-        if: github.event_name == 'workflow_dispatch'  # Only runs on manual trigger
-        run: |
-          echo "Running manual execution for Docker image push."
-          docker push /your-image-name:${{ github.ref_name }}
-          
