--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -46,14 +46,13 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
 
-      
-  push:
-    if: github.event_name == 'workflow_dispatch'
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
       - name: Push to Docker Hub
-        run: |
-          echo "Pushing Docker image to Docker Hub"
-          docker tag ${{ secrets.DOCKER_HUB_USERNAME }}/tetrisant:latest ${{ secrets.DOCKER_HUB_USERNAME }}/tetrisant:${{ github.ref_name }}
-          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/tetrisant:${{ github.ref_name }}
+        if: github.event_name == 'workflow_dispatch'
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          dockerfile: dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/tetrisant:latest
+             
+          
